creacion codigo HTML

--- a/play.html
+++ b/play.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Wheel Of Doom</h1>
+    <input type="text" />
+    <div class="lista_nombres">
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+    </div>
+    <button class="start">START</button>
+
     <script src="script.js"></script>
   </body>
 </html>
