--- a/home.html
+++ b/home.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hide_in_the-World-Home</title>
     <link rel="stylesheet" href="style.css" />
-    
-    
-</head>
-<body>
+  </head>
+  <body>
+    <h1>Wheel Of Doom</h1>
+    <input type="text" />
+    <div class="lista_nombres">
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+      <div id="nombre_guardado">1</div>
+    </div>
+    <button class="start">START</button>
 
-
-    <script src="script.js"></script>        
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
