carga de logo html

--- a/home.html
+++ b/home.html
@@ -7,27 +7,12 @@
     <title>Hide_in_the_World_Play</title>
     <link rel="stylesheet" href="style.css" />
 
-    <style>
-        .warning {
-            font-size: 25px;
-            margin-top: -10px;
-        }
 
-        #logo {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            width: 100px;
-            height: auto;
-            background-image: url("https://ibb.co/gtzSsWM");
-            background-size: cover;
-        }
-    </style>
 </head>
 
 <body>
 
-    <div id="logo"></div>
+    <div><img src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" width="80px" height="80px" alt="logovertical-colombia"></div>
 
     <h1>Hide in the World Play</h1>
 
@@ -36,10 +21,6 @@
         <input type="text" id="player" name="player" required><br><br>
 
         <div id="players-section">
-            <div id="players-list">
-                <h3>Players:</h3>
-                <ul id="player-names"></ul>
-            </div>
 
             <div id="chosen-players">
                 <h3>Chosen Players:</h3>
@@ -63,30 +44,6 @@
     </form>
 
     <script src="script.js"></script>
-    <script>
-        const form = document.getElementById("start-form");
-        const playerInput = document.getElementById("player");
-        const playerNamesList = document.getElementById("player-names");
-        const chosenPlayerNamesList = document.getElementById("chosen-player-names");
-
-        form.addEventListener("submit", function (event) {
-            event.preventDefault();
-
-            const playerName = playerInput.value.trim();
-            if (playerName !== "") {
-                const listItem = document.createElement("li");
-                listItem.textContent = playerName;
-                chosenPlayerNamesList.appendChild(listItem);
-                playerInput.value = "";
-            }
-        });
-
-        playerInput.addEventListener("keyup", function (event) {
-            if (event.keyCode === 13) { // 13 is the key code for "Enter" key
-                form.dispatchEvent(new Event('submit'));
-            }
-        });
-    </script>
 </body>
 
 </html>
