creacion codigo play.html

--- a/play.html
+++ b/play.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div>
+      <img
+        id="logo"
+        src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png"
+        width="100px"
+        height="100px"
+        alt="logo"
+      />
+    </div>
+    <img
+      class="mundo"
+      src="https://images.vexels.com/media/users/3/157970/isolated/preview/c156b4270aea292b9b335dd463ea17eb-icono-de-planeta-tierra-icono-de-tierra.png
+      "
+      alt=""
+    />
+    <div class="botones_movimiento">
+      <button><</button>
+      <button>></button>
+    </div>
+    <button class="fire">FIRE</button>
+
     <script src="script.js"></script>
   </body>
 </html>
