carga imagen colombia

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 
       <button type="submit">PLAY</button>
     </form>
-
+    <audio src="https://on.soundcloud.com/Kny5b"></audio>
     <script src="script.js"></script>
   </body>
 </html>
