--- a/home.html
+++ b/home.html
@@ -41,7 +41,10 @@
         <h6>Please do not play if you are under 18 years old.</h6>
       </div>
 
-      <button type="submit">PLAY</button>
+      <button type="submit" id="playbutton">PLAY</button>
+      <div id="gamecontainer" style="display: none;">
+        <!-- Contenido del juego -->
+      </div>
     </form>
 
     <script src="script.js"></script>
