--- a/game.html
+++ b/game.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hide_in_the-World-Play</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div>
-      <img
-        id="logo"
-        src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png"
-        width="100px"
-        height="100px"
-        alt="logo"
-      />
-    </div>
-    <img
-      class="mundo"
-      src="https://images.vexels.com/media/users/3/157970/isolated/preview/c156b4270aea292b9b335dd463ea17eb-icono-de-planeta-tierra-icono-de-tierra.png
-      "
-      alt=""
-    />
-    <div class="botones_movimiento">
-      <button><</button>
-      <button>></button>
-    </div>
-    <button class="fire">FIRE</button>
 
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hide_in_the-World-Play</title>
+  <link rel="stylesheet" href="style2.css" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maxium-scale=1.0, minium-scale=1.0">
+</head>
+
+<body>
+
+  <div class="container">
+    <img id="logo" src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" width="100px" height="100px" alt="logo" />
+  </div>
+  <img class="mundo" src="https://images.vexels.com/media/users/3/157970/isolated/preview/c156b4270aea292b9b335dd463ea17eb-icono-de-planeta-tierra-icono-de-tierra.png
+      " alt="" />
+  <div class="botones_movimiento">
+    <button></button>
+    <button>></button>
+  </div>
+
+  <button class="fire">FIRE</button>
+
+  <script src="script.js"></script>
+  </div>
+</body>
+
 </html>
