--- a/home.html
+++ b/home.html
@@ -41,7 +41,9 @@
         <h6>Please do not play if you are under 18 years old.</h6>
       </div>
 
-      <button type="submit" id="playbutton">PLAY</button>
+      <button type="submit" id="agregar">AGREGAR</button>
+
+      <a href="./game.html">INICIO</a>
       <div id="gamecontainer" style="display: none;">
         <!-- Contenido del juego -->
       </div>
