pirmeros estilos  de la parte del home del video juego

--- a/game.html
+++ b/game.html
@@ -95,7 +95,7 @@
         </circle>
        </svg>
     <div class="botones_movimiento">
-      <button><</button>
+      <button></button>
       <button>></button>
     </div>
     <button class="fire">FIRE</button>
