--- a/home.html
+++ b/home.html
@@ -10,17 +10,16 @@
     <div>
       <img
         src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png"
-        width="80px"
-        height="80px"
+
         alt="logovertical-colombia"
       />
     </div>
 
-    <h1>Hide in the World Play</h1>
+    <h1>Escondete en Colombia</h1>
 
     <form id="start-form">
-      <label for="player">Player (required):</label>
-      <input type="text" id="player" name="player" required /><br /><br />
+      <label for="player"></label>
+      <input type="text" id="player" placeholder="Escribe tu nombre" name="player" required /><br /><br />
 
       <div id="players-section">
         <div id="chosen-players">
