--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     <div id="players-section">
         <form id="start-form">
             <label for="player"></label>
-            <input type="text" id="player" name="player" required><br><br>
+            <input type="text" id="player" placeholder="Escribe tu nombre" name="player" required /><br /><br />
 
             <label for="department">Select Department:</label>
             <select id="department" name="department"></select><br><br>
