--- a/home.html
+++ b/home.html
@@ -21,7 +21,9 @@
             <label for="department">Select Department:</label>
             <select id="department" name="department"></select><br><br>
 
-            <button type="submit">PLAY</button>
+            <button type="submit" id="agregar">AGREGAR</button>
+
+            <a href="./game.html">INICIO</a>
         </form>
 
         <div id="chosen-players">
