se realiza funcionabilidad de click en departamentos pero llama lista desde home se presentan fallos

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <label for="department">Select Department:</label>
             <select id="department" name="department"></select><br><br>
 
-            <button type="submit" id="agregar">AGREGAR</button>
+            <button type="submit" >AGREGAR</button>
 
             <a href="./game.html">INICIO</a>
         </form>
