--- a/game.html
+++ b/game.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style2.css"/>
   </head>
   <body>
+
     <img
       class="mapa"/>
+
         <svg  id="colombia" version="1.2" viewbox="0 0 1000 1195"  xmlns="http://www.w3.org/2000/svg">
         <path d="M10.5 640.1l0.2 0.9-0.6 0.5-0.4 0-0.8 0.7-0.4 0.1-0.3-0.3 0.5-0.8 0.5-0.3 0-0.6 0.4-0.2 0.9 0z" id="COL99" name="">
         </path>
@@ -86,7 +88,38 @@
         </circle>
        </svg>
 
-    <script src="script.js"></script>
-    <script src="load_departments.js"></script>
+        <!-- Modal para el pop-up -->
+    <div id="modal_container" class="modal-container">
+      <div class="container_imagen">
+          <img src="../assets/img/skeleton.png" id="imagen">
+      </div>
+      <div class="modal">
+          <h3 id="alertPlayerDeleted"></h3>
+          <h4>Coders muertos:</h4>
+          <ul id="deadCodersList"></ul>
+          <div class="container_bottons" id="container_buttons">
+              <div id="nextKill">
+                  <img src="../assets/svg/Continue.svg" alt="continue button" class="btcontinue">
+              </div>
+              <button id="gameOverButton">Game Over</button>
+          </div>
+      </div>
+  </div>
+
+  <div id="gameIsOver">
+    <h1>Game Over!</h1>
+    <p>Coders muertos: <span id="deadCodersCount">0</span></p>
+    <p>Presiona "Game Over" para reiniciar el juego.</p>
+</div>
+  <button href="./home.html" id="reset-game">Reiniciar Juego</button>
+
+  <script src="script.js"></script>
+  <script src="load_departments.js"></script>
+  <script>
+      // Guardar la lista de jugadores en el almacenamiento local
+      const playerList = document.getElementById("chosen-player-names");
+      localStorage.setItem("playerList", playerList.innerHTML);
+  </script>
+  <script src="script_game.js"></script>
   </body>
 </html>
