se agregan estilos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div>
         <img id="logo" src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" width="100px" height="100px" alt="logo">
     </div>
-    <button><a href="./home.html"> Start </a></button>
+    <a href="./home.html" class="button"> Start 
+        <span></span>
+        <span></span>
+    </a>
 </body>
 </html>
