Arreglo y modificacion del label de nombres de la pagina home

--- a/home.html
+++ b/home.html
@@ -16,8 +16,8 @@
 
     <div id="players-section">
         <form id="start-form">
-            <label for="player">Player (required):</label>
-            <input type="text" id="player" name="player" required><br><br>
+            <label for="player"></label>
+            <input type="text" id="player" placeholder="Escribe tu nombre" name="player" required><br><br>
 
             <label for="department">Select Department:</label>
             <select id="department" name="department"></select><br><br>
