--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <img id="logo" src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" width="100px" height="100px" alt="logo">
     </div>
 
-    <h1>Escondete en Colombia</h1>
+    <h1>Escóndete en Colombia</h1>
 
     <div id="players-section">
         <form id="start-form">
