--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-git p<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,7 +11,7 @@ git p<!DOCTYPE html>
         <img id="logo" src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" width="100px" height="100px" alt="logo">
     </div>
 
-    <h1>Hide in the World Play</h1>
+    <h1 id="Titulo">Hide in the World Play</h1>
 
     <form id="start-form">
       <label for="player">Player (required):</label>
@@ -20,7 +20,7 @@ git p<!DOCTYPE html>
     <div id="players-section">
         <form id="start-form">
             <label for="player"></label>
-            <input type="text" id="player" placeholder="Escribe tu nombre" name="player" required /><br /><br />
+            <input type="text" id="Player" placeholder="Escribe tu nombre" name="player" required /><br /><br />
 
             <label for="department">Select Department:</label>
             <select id="department" name="department"></select><br><br>
@@ -41,11 +41,11 @@ git p<!DOCTYPE html>
       </div>
 
       <div class="warning">
-        <h6>We are not responsible for any traumas caused by this game.</h6>
+        <h6 id="Riesgo">We are not responsible for any traumas caused by this game.</h6>
       </div>
 
       <div class="warning">
-        <h6>Please do not play if you are under 18 years old.</h6>
+        <h6 id="Game">Please do not play if you are under 18 years old.</h6>
       </div>
 
       <button type="submit">PLAY</button>
