--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./index.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./index.css" rel="stylesheet" />
     <title>Hide_in_the_World</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <img id="logo" src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" width="100px" height="100px" alt="logo">
+      <img
+        id="logo"
+        src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png"
+        width="100px"
+        height="100px"
+        alt="logo"
+      />
     </div>
     <button><a href="./home.html"> Start </a></button>
-</body>
+  </body>
 </html>
