--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <div>
         <img id="logo" src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" width="100px" height="100px" alt="logo">
     </div>
-
+<div class="container">
     <h1 id="Titulo">Hide in the World Play</h1>
 
     <form id="start-form">
@@ -35,7 +35,7 @@
           <ul id="chosen-player-names"></ul>
         </div>
       </div>
-
+    </div>
       <div class="warning">
         <h1><strong>Warning!</strong></h1>
       </div>
@@ -49,6 +49,7 @@
       </div>
 
       <button type="submit">PLAY</button>
+    
     </form>
     <audio src="https://on.soundcloud.com/Kny5b"></audio>
     <script src="script.js"></script>
