--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         alt="logo"
       />
     </div>
-    <button><a href="./home.html"> Start </a></button>
+    <!--Modificacion a la etiqueta "a" de boton start -->
+    <a id="start" class="button">
+      Start
+      <span></span>
+      <span></span>
+    </a>
+
+    <script src="inicio.js"></script>
   </body>
 </html>
