--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./index.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro&family=Literata">
     <title>Hide_in_the_World</title>
+    <style>
+        h1,h2,h3,h4,h5,h6,body {font-family: "Literata"}
+        </style>
 </head>
 <body>
     <div>
