--- a/home.html
+++ b/home.html
@@ -24,7 +24,10 @@
 
             <button type="submit" >AGREGAR</button>
 
-            <a href="./game.html">INICIO</a>
+            <a href="./game.html" class="inicio">INICIO
+                <span></span>
+                <span></span>
+            </a>
         </form>
 
         <div id="chosen-players">
