se agrega explosion al dar click

--- a/game.html
+++ b/game.html
@@ -104,6 +104,12 @@
         </circle>
        </svg>
 
+       <!-- Explosion al dar click -->
+
+       <div id="explosion-container">
+        <img id="explosion-gif" src="./img/picmix.com_1944817.gif" alt="Explosion">
+      </div>
+
         <!-- Modal para el pop-up -->
     <div id="modal_container" class="modal-container">
       <div class="container_imagen">
