se realiza css inicial para popup en game

--- a/game.html
+++ b/game.html
@@ -21,6 +21,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../meta/favicons/favicon-16x16.png">
 
     <link rel="stylesheet" href="style2.css"/>
+    <link rel="stylesheet" href="Popup_dead_coder.css">
   </head>
   <body>
 
