se guardan cambios

--- a/game.html
+++ b/game.html
@@ -110,12 +110,13 @@
 
   
 
-  <div class="popup" id="gameIsOver">
-    
+  <div id="gameIsOver">
+    <div class="popup">
     <h1>Game Over!</h1>
     <p>Coders muertos: <span id="deadCodersCount">0</span></p>
     <p>Presiona "Game Over" para reiniciar el juego.</p>
     <button href="./home.html" id="reset-game">Reiniciar Juego</button>
+  </div>
 </div>
 
 
