--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <div>
         <img id="logo" src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" width="100px" height="100px" alt="logo">
     </div>
-    <a href="./home.html" class="button"> Start 
+    <a  id="start"   class="button"> Start 
         <span></span>
         <span></span>
     </a>
+    <script src="inicio.js"></script>
 </body>
 </html>
