Responsive página home de index.html  ajustado

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./index.css" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
     <title>Hide_in_the_World</title>
 
     <!-- FAVICONS -->
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div>
-        <img id="logo" src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" width="100px" height="100px" alt="logo">
+        <img id="logo" src="https://i.ibb.co/5sBrqjW/logovertical-colombia.png" alt="logo">
     </div>
     <a  id="start"   class="button"> Start 
         <span></span>
