--- a/home.html
+++ b/home.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hide_in_the_World-Home</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="../meta/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../meta/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../meta/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../meta/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../meta/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../meta/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../meta/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../meta/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../meta/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="../meta/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../meta/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../meta/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../meta/favicons/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
 </head>
  <!--Arreglo a body para funcionalidad de audio-->
@@ -19,17 +32,20 @@
         <form id="start-form">
             <label for="player"></label>
             <input type="text" id="player" placeholder="Escribe tu nombre" name="player" required /><br /><br />
-            <button type="submit" id="agregar" >AGREGAR</button>
+        <div id="Home">
 
-            <a id="inicio" class="inicio" disabled>INICIO
-                <span></span>
-                <span></span>
-            </a>
+                <button type="submit" id="agregar" >AGREGAR</button>
+
+                <a id="inicio" class="inicio">INICIO
+                    <span></span>
+                    <span></span>
+                </a>
         </form>
 
-        <div id="chosen-players">
-            <h3>Players list:</h3>
-            <ul id="chosen-player-names"></ul>
+            <div id="chosen-players">
+                <h3>Players list:</h3>
+                <ul id="chosen-player-names"></ul>
+            </div>
         </div>
     </div>
 
