--- a/home.html
+++ b/home.html
@@ -34,34 +34,24 @@
             <input type="text" id="player" placeholder="Escribe tu nombre" name="player" required /><br /><br />
         <div id="Home">
             
-                <button type="submit" id="agregar" >AGREGAR</button>
+                <button type="submit" id="agregar">AGREGAR</button>
 
                 <a id="inicio" class="inicio">INICIO
                     <span></span>
                     <span></span>
                 </a>
             </form>
-
             <div id="chosen-players">
                 <h3>Players list:</h3>
                 <ul id="chosen-player-names"></ul>
             </div>
         </div>
     </div>
-
     <div class="warning">
-        <h1><strong>Warning!</strong></h1>
-    </div>
-
-    <div class="warning">
+        <h1 id="warning"><strong>Warning!</strong></h1>
         <h6>We are not responsible for any traumas caused by this game.</h6>
-    </div>
-
-
-    <div class="warning">
         <h6>Please do not play if you are under 18 years old.</h6>
     </div>
-
         <!--Musica de fondo en pagina home-->
     <audio id="musica" autoplay loop style="display: none;"></audio>
     <script src="script.js"></script>
