modificaciones responsive pagina 2 game

--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
     </div>
     <div class="warning">
         <h1 id="warning"><strong>Warning!</strong></h1>
-        <h6>We are not responsible for any traumas caused by this game.</h6>
-        <h6>Please do not play if you are under 18 years old.</h6>
+        <h6 id="Riesgo">We are not responsible for any traumas caused by this game.</h6>
+        <h6 id="Game">Please do not play if you are under 18 years old.</h6>
     </div>
         <!--Musica de fondo en pagina home-->
     <audio id="musica" autoplay loop style="display: none;"></audio>
