cierre de ajustes bryant

--- a/game.html
+++ b/game.html
@@ -271,5 +271,5 @@
     <script src="script_game.js"></script>
     
   
-  </body>>>>>>>> dcb86d90dcf4a9331c0584521af6ee704e5cb360
+  </body>
 </html>
